--- a/site/frontend/package.json
+++ b/site/frontend/package.json
@@ -13,7 +13,8 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
